# RedCrosshair

./: .gitignore  .gitmodules  Build.bat  Build.sh  CMakeLists.txt  LICENSE
Source/: Defines.hpp  Hello.cpp  Main.cpp
Source/Application/: Application.cpp  Application.hpp  ImGuiFramework.cpp  ImGuiFramework.hpp
Source/Core/: Application.cpp  Application.hpp  ConsoleAppManager.cpp  ConsoleAppManager.hpp  ImGuiFramework.cpp  ImGuiFramework.hpp  Logger.cpp  Logger.hpp
Source/UserInterface/: Console.cpp  Console.hpp
